k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kerry.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kerry.service: frontend
  template:
    metadata:
      labels:
        io.kerry.service: frontend
    spec:
      containers:
        - env:
            - name: API_SERVER
              value: http://backend:4000
          image: cdh0012/movies:latest
          name: frontend
          ports:
            - containerPort: 8000
          resources: {}
