k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kerry.service: backend
  name: backend
spec:
  type: NodePort
  ports:
    - name: 'backend'
      port: 4000
      targetPort: 4000
  selector:
    io.kerry.service: backend
