k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kerry.service: database
  name: database
spec:
  type: NodePort
  ports:
    - name: 'database'
      port: 5000
      targetPort: 3306
  selector:
    io.kerry.service: database
status:
  loadBalancer: {}
