k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kerry.service: frontend
  name: frontend
spec:
  type: NodePort
  ports:
    - name: 'frontend'
      port: 8000
      targetPort: 8000
  selector:
    io.kerry.service: frontend
