k8s/moviesbackend-backend1-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: moviesbackend-backend1
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kerry.service: backend
  podSelector:
    matchLabels:
      io.kerry.service: database
